# hobnob

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
src/parallel/: main.py  utils.py
{{cookiecutter.project_name}}/: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/docs/: contributing.md  index.md  release-notes.md
{{cookiecutter.project_name}}/src/tests/: test_utils.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: main.py
